Make NTI works on Ubuntu

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,35 @@
 *.gen
 *CG_*
 *CVS*
+m.txt
+mc.txt
+*.pyc
+*~
+*.swc
+*.swo
+bin
+*.swp
+*.bak
+*.log
+*/extensions/*/module.mk
+models/*/module.mk
+models/*/*/module.mk
+models/*/copyModules
+models/*/Extensions.mk
+gsl/*/module.mk
+gsl/*/*/*/module.mk
+gsl/*/*/*.mk
+lex.yy.C
+speclang.tab.C
+speclang.tab.h
+mdl.output
+mdl.tab.c
+mdl.tab.h
+gsl/*/*/copyModules
+*.output
+*.a
+out.txt
+tags
+tmhoangt@*
+*.zip
+core
