fix Makefile in ./common \n fix std::copy header in ./nti

--- a/common/Makefile
+++ b/common/Makefile
@@ -1,16 +1,26 @@
 CFLAGS= -g -Wall -O3                                                            
 OBJDIR= ./obj
+SRCDIR= ./src
+INCDIR= ./include
 
-SRCS=$(wildcard *.C)
-OBJS=$(SRCS:.C=.o )
+.DEFAULT_GOAL := final
+
+SRCS=$(foreach dir, $(SRCDIR), $(wildcard $(dir)/*.C))
+TMPS=$(foreach dir, $(SRCDIR), $(patsubst $(dir)/%, $(OBJDIR)/%, $(wildcard $(dir)/*.C)))
+OBJS=$(patsubst %.C, %.o, $(TMPS))
+#OBJS=$(patsubst $($(PURE_SRCS:.C=.o )
+
+vpath %.C $(SRCDIR)
+vpath %.h $(INCDIR)
 
 $(OBJS): | $(OBJDIR)
 
 $(OBJDIR): 
 	mkdir -p $(OBJDIR)
 	
-all:$(OBJS)
+final: $(OBJS)
+	echo $(OBJS)
 
-%.o: %.C 
-	$(CC) $(CFLAGS) -c $< -o $(OBJDIR)/$@
+$(OBJDIR)/%.o: %.C 
+	$(CC) $(CFLAGS) -c $< -o $@
 
