update:  - .lvimrc (folding code gsl/mdl),  - simplify building effort of mdl  - change from multiple 'if' to one 'switch' statement  - refactor code in HodgkunHuxleyVoltage*.C add: cleanall target (common/Makefile) fix:  - avoid printing successful when it's failed  - make_nts minor bug  - remove memcpy from C++ generated code  - missing header in TissueFunctor.C

--- a/.lvimrc
+++ b/.lvimrc
@@ -24,6 +24,6 @@ set path+=**
 :set tags=$NTSROOT/tags
 
 au BufNewFile,BufRead *.di setlocal ft=d
-au BufNewFile,BufRead *.gsl setlocal ft=gsl
-au BufNewFile,BufRead *.mdl setlocal ft=mdl
+au BufNewFile,BufRead *.gsl setlocal ft=gsl foldmethod=marker
+au BufNewFile,BufRead *.mdl setlocal ft=mdl foldmethod=marker
 
