update:   - use 'initializeCompartmentData' methods name for all 'compartment'-variables (Vm, Ca)   - change 'double' to 'key_size_t' for key in Segment.h, SegmentForce.h CaConnexon.mdl   - produceIntialVoltage --> produceInitialState   in Connexon.mdl   - put different Connexon into Connexon.mdl (Connexon_Vm, Connexon_VmCai, Connexon_VmCaiER)   - define 3 different axial resistance g,gMYO,gER for Vm,Camyo,CaER from spineneck to dendritic-compartment add:   - NeurogenBranch::getDistanceFirstLastSegment() ... use the implementation of older-version of NeurogenBranch::getLength() which return the Euclidean distance between the first and last segment   - add  '-rebuild' option to all build; and '-clean' just mean wipe-out all generated files [for incremental build, only use platform name]   (affect build_gsl, nti/Makefile, mdl/Makefile, gsl/configure.py)   - constant for handling cytoplasmic volume and ER volume (MaxComputeOrder.h)   - new files: CaERConcentration.h/C   - ChannelNat model (mdl, C++)   - graphs/MSN/ fix:   - Branch::getLength()  return real length not the distance between first and last points   - NeurogenBranch::getLength() ... use the implementation of getTotalSegmentLength() and remove getTotalSegmentLength()   - calculate surface area for compartment next to soma (HodgkinHuxleyVoltage, CaConcentration, CaERConcentration)   - calculate volume for compartment (CaConcentration, CaERConcentration)   - the way we estimate surface area of explicit junction for soma  (HodgkinHuxleyVoltageJunction, CaConcentrationJunction, CaERConcentrationJunction)   - initializeData --> initializeCompartmentData : for compartmental variables (HodgkinHuxleyVoltage.mdl CaConcentration.mdl )   - Connexon_VmCaiCompCategory.h/C -wrong name use

--- a/nti/Makefile
+++ b/nti/Makefile
@@ -10,7 +10,7 @@ vpath %.cxx $(SRC_DIR)
 
 FOR_BLUEGENE_P=0
 FOR_BLUEGENE_L=0
-FOR_BLUEGENE_Q=1
+FOR_BLUEGENE_Q=0
 FOR_AIX=0
 A2AW=0
 
@@ -186,9 +186,9 @@ uninstall:
 
 install: all
 
-clean: ; rm -f $(ND_SHARED_OBJECTS) $(NG_SHARED_OBJECTS) $(NG_OBJECTS) $(ND_OBJECTS) $(TD_OBJECTS) TissueContext.o
+clean: ; -rm -f $(ND_SHARED_OBJECTS) $(NG_SHARED_OBJECTS) $(NG_OBJECTS) $(ND_OBJECTS) $(TD_OBJECTS) TissueContext.o
 realclean: clean
-	rm -f $(TARGETS) 
+	-rm -f $(TARGETS) 
 
 #.SUFFIXES: .cxx .cpp .c .h .o
 # Include the C include dependencies
