update: add:   - comments to files   - more stuffs to ignore in .gitignore   - NumberUtils.h

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ core
 *.ASC
 *.DAT
 LensRootConfig.h
+.ropeproject
+gsl/extensions/interface/*
+models/**/*.h
+models/**/*.C
+gsl/extensions/struct/*
+*.swn
+graphs/**/runs/**
