update:   - HayModel: to use new convention for BRANCHTYPE add:   - TissueContext.h/cxx: explaination   - build DEBUG by default; add option '-release' for optimized code   - MaxComputeOrder.h: handle spine geometry (size + length) fix:   - ChannelBKalphabe, ChannelSK: use Baseline [Cai] when only simulate Vm   - param file content   - Params.cxx/h : read param file correctly   - Wolf2005.gsl, Nakano.gsl: how to define string   - make_nts: copy Extensions.mk to gsl

--- a/nti/Makefile
+++ b/nti/Makefile
@@ -92,8 +92,14 @@ endif
 CFLAGS += -I$(HEADER_DIR) 
 
 DEFINES = #-DVERBOSE -DBINARY64BITS
-OPT=-O3
+ifeq ($(debug), yes)
+OPT=
 DEBUG=-g
+else
+OPT=-O3
+DEBUG=
+endif
+
 UTILS=-I../gsl/utils/std/include -I../common/include/
 COPYRIGHT=-I../gsl/framework/factories/include
 
