update: add:  - add RYR1  - add gmp library  - NCX.mdl  - stochastic simulation capability --> Params.cxx: code to handle Tuan's algorithm for stochastic simulation  - CaERConcentration(Junction): add 'fractionVolumeER' fix:  - .ycm_extra_conf.py [working now]  - removing setPointers() for all channels  - Fix the conversion of flux in CaER (Junction + Branch)   wrong: RHS -=  J_Ca;   correct: RHS -= Vmyo/(VolER) * J_Ca;

--- a/.lvimrc
+++ b/.lvimrc
@@ -35,3 +35,7 @@ noremap <leader>f <Esc>:syn region myFold start="{{{" end="}}}" transparent fold
 "" all consecutive comments (starting with a space and //)
 "" will be folded"
 "syn match comment "\v(^\s*//.*\n)+" fold<CR>
+
+"YouCompleteMe
+"let vimDir = "$NTSROOT"
+"let g:ycm_global_ycm_extra_conf = expand(vimDir . ".ycm_extra_conf.py")
