update: add:  - TissueFunctor: the capability to accept 'int' data by passing 'int:dataname', instead of 'dataname' only.    So 'float:dataname' is the same as 'dataname'  - .lvimrc: add foldable to .par* files in vim fix:  - Params.cxx:(1) read values in the form [1,3:6], (2) print proper error msg at file-not-found, (3) put channel-state to 0-based  - configure.py: make sure not printing successful msg if an error occurs  - SingleChannelRYR.cxx: (1) missing to allocate an array, (2) use new data member to decide how to choose #channels in one compartment, (3) add CountableModel to print channel count info

--- a/.lvimrc
+++ b/.lvimrc
@@ -30,6 +30,7 @@ au BufNewFile,BufRead *.di setlocal ft=d
 au BufNewFile,BufRead *.gsl setlocal ft=gsl foldmethod=marker
 au BufNewFile,BufRead *.mdl setlocal ft=mdl foldmethod=marker
 au BufNewFile,BufRead NTSMacros.h setlocal foldmethod=marker
+au BufNewFile,BufRead *.par setlocal foldmethod=marker
 "noremap <leader>f <Esc>:syn region myFold start="/*{{{*/" end="/*}}}*/" transparent fold<CR>
 noremap <leader>f <Esc>:syn region myFold start="{{{" end="}}}" transparent fold<CR>
 "" all consecutive comments (starting with a space and //)
