update:  - genSpines.py: accept argument to be easier modified add:  - connect_stimulus_<model>.gsl, connect_recording_<model>.gsl fix:  - Tuan2016.gsl: removed dundancy in GSL, and revise using sub.gsl files remove:  - connect_<model>.gsl: replaced by 2 new files

--- a/graphs/MSN/recording_model.gsl.template
+++ b/graphs/MSN/recording_model.gsl.template
@@ -1,3 +1,13 @@
+VoltageDisplay voltageDisplay<fileName= PathFileCombine("somaV.dat")>;
+voltageDisplay.dataCollection(<>) on recOn;
+
+CalciumDisplay calciumSomaDisplay<fileName= PathFileCombine("somaCa.dat")>;
+calciumSomaDisplay.dataCollection(<>) on recOn;
+
+VoltageDisplay synapseVoltageDisplay0<fileName=PathFileCombine("synapseV0.dat")>;
+synapseVoltageDisplay0.dataCollection(<>) on recOn;
+CalciumDisplay synapseCalciumDisplay0<fileName=PathFileCombine("synapseC0.dat")>;
+synapseCalciumDisplay0.dataCollection(<>) on recOn;
 
 {{#inputs}}
 {{#spine_include}}
