--- a/graphs/MSN/recording_model.gsl.template
+++ b/graphs/MSN/recording_model.gsl.template
@@ -4,40 +4,40 @@ voltageDisplay.dataCollection(<>) on recOn;
 CalciumDisplay calciumSomaDisplay<fileName= PathFileCombine("somaCa.dat")>;
 calciumSomaDisplay.dataCollection(<>) on recOn;
 
-VoltageDisplay synapseVoltageDisplay0<fileName=PathFileCombine("synapseV0.dat")>;
-synapseVoltageDisplay0.dataCollection(<>) on recOn;
-CalciumDisplay synapseCalciumDisplay0<fileName=PathFileCombine("synapseC0.dat")>;
-synapseCalciumDisplay0.dataCollection(<>) on recOn;
+VoltageDisplay synapseVoltageDisplay_0<fileName=PathFileCombine("synapseV0.dat")>;
+synapseVoltageDisplay_0.dataCollection(<>) on recOn;
+CalciumDisplay synapseCalciumDisplay_0<fileName=PathFileCombine("synapseC0.dat")>;
+synapseCalciumDisplay_0.dataCollection(<>) on recOn;
 
 {{#inputs}}
 {{#spine_include}}
-VoltageDisplay voltageDisplay_spine{{name}}<fileName="out/V_spine{{name}}.dat">;
-voltageDisplay_spine{{name}}.dataCollection(<>) on recOn;
+VoltageDisplay voltageDisplay_spine_{{name}}<fileName="out/V_spine_{{name}}.dat">;
+voltageDisplay_spine_{{name}}.dataCollection(<>) on recOn;
 
 #if SIMULATION_INVOLVE >= VM_CACYTO
-CalciumDisplay calciumDisplay_spine{{name}}<fileName="out/Ca_spine{{name}}.dat">;
-calciumDisplay_spine{{name}}.dataCollection(<>) on recOn;
+CalciumDisplay calciumDisplay_spine_{{name}}<fileName="out/Ca_spine_{{name}}.dat">;
+calciumDisplay_spine_{{name}}.dataCollection(<>) on recOn;
 #endif
 
 {{/spine_include}}
 
 {{#bouton_include}}
-VoltageDisplay voltageDisplay_bouton{{name}}<fileName="out/V_bouton{{name}}.dat">;
-voltageDisplay_bouton{{name}}.dataCollection(<>) on recOn;
+VoltageDisplay voltageDisplay_bouton_{{name}}<fileName="out/V_bouton_{{name}}.dat">;
+voltageDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 
 #if SIMULATION_INVOLVE >= VM_CACYTO
-CalciumDisplay calciumDisplay_bouton{{name}}<fileName="out/Ca_bouton{{name}}.dat">;
-calciumDisplay_bouton{{name}}.dataCollection(<>) on recOn;
+CalciumDisplay calciumDisplay_bouton_{{name}}<fileName="out/Ca_bouton_{{name}}.dat">;
+calciumDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 #endif
 
 {{/bouton_include}}
 
 {{#synapse_include}}
-VoltageDisplay voltageDisplay_synapse{{name}}<fileName="out/V_synapse{{name}}.dat">;
-voltageDisplay_synapse{{name}}.dataCollection(<>) on recOn;
+VoltageDisplay voltageDisplay_synapse_{{name}}<fileName="out/V_synapse_{{name}}.dat">;
+voltageDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 #if SIMULATION_INVOLVE >= VM_CACYTO
-CalciumDisplay calciumDisplay_synapse{{name}}<fileName="out/Ca_synapse{{name}}.dat">;
-calciumDisplay_synapse{{name}}.dataCollection(<>) on recOn;
+CalciumDisplay calciumDisplay_synapse_{{name}}<fileName="out/Ca_synapse_{{name}}.dat">;
+calciumDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 #endif
 
 {{/synapse_include}}
@@ -47,23 +47,23 @@ calciumDisplay_synapse{{name}}.dataCollection(<>) on recOn;
 {{#inputsInhibitory}}
 {{#bouton_include}}
 
-VoltageDisplay voltageDisplay_bouton{{name}}<fileName="out/V_bouton{{name}}.dat">;
-voltageDisplay_bouton{{name}}.dataCollection(<>) on recOn;
+VoltageDisplay voltageDisplay_bouton_{{name}}<fileName="out/V_bouton_{{name}}.dat">;
+voltageDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 
 #if SIMULATION_INVOLVE >= VM_CACYTO
-CalciumDisplay calciumDisplay_bouton{{name}}<fileName="out/Ca_bouton{{name}}.dat">;
-calciumDisplay_bouton{{name}}.dataCollection(<>) on recOn;
+CalciumDisplay calciumDisplay_bouton_{{name}}<fileName="out/Ca_bouton_{{name}}.dat">;
+calciumDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 #endif
 
 {{/bouton_include}}
 
 {{#synapse_include}}
-VoltageDisplay voltageDisplay_synapse{{name}}<fileName="out/V_synapse{{name}}.dat">;
-voltageDisplay_synapse{{name}}.dataCollection(<>) on recOn;
+VoltageDisplay voltageDisplay_synapse_{{name}}<fileName="out/V_synapse_{{name}}.dat">;
+voltageDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 
 #if SIMULATION_INVOLVE >= VM_CACYTO
-CalciumDisplay calciumDisplay_synapse{{name}}<fileName="out/Ca_synapse{{name}}.dat">;
-calciumDisplay_synapse{{name}}.dataCollection(<>) on recOn;
+CalciumDisplay calciumDisplay_synapse_{{name}}<fileName="out/Ca_synapse_{{name}}.dat">;
+calciumDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 #endif
 
 {{/synapse_include}}
