update:  - HodgkinHuxleyVoltageJunction: add hints when neurons have no Cm setting in CptParams.file add:  - Add -DNOWARNING_DYNAMICCAST: to avoid printing too many messages fix:  - genSpines.py: revise to generate proper spine+bouton MTYPE values  - *template: files  - TissueFunctor: make sure only 1 method is used for getNumCompartments()  - TissueFunctor: getCptIndex()

--- a/graphs/MSN/connect_recording_model.gsl.template
+++ b/graphs/MSN/connect_recording_model.gsl.template
@@ -1,19 +1,20 @@
-/*
-	TissueSite synapseSite_0( -41.813, 175.470, -0.645, 7.0 );
-
-	polyConnect(timeStep, synapseVoltageDisplay0, <>, <>);
-	polyConnect(tissueFunctor("Probe", <CATEGORY="BRANCH", TYPE="Voltage", NEURON_INDEX=0>), synapseVoltageDisplay0, <>, <site=synapseSite_0>);
-
    polyConnect(timeStep, voltageDisplay, <>, <>);
    polyConnect( tissueFunctor("Probe", <CATEGORY="JUNCTION", TYPE="Voltage", BRANCHORDER=0>), voltageDisplay, <>, <>);
 
 #if SIMULATION_INVOLVE >= VM_CACYTO
-	polyConnect(timeStep, synapseCalciumDisplay0, <>, <>);
-	polyConnect(tissueFunctor("Probe", <CATEGORY="BRANCH", TYPE="Calcium", NEURON_INDEX=0>), synapseCalciumDisplay0, <>, <site=synapseSite_0>);
-
    polyConnect(timeStep, calciumSomaDisplay, <>, <>);
    polyConnect( tissueFunctor("Probe", <CATEGORY="JUNCTION", TYPE="Calcium", BRANCHORDER=0>), calciumSomaDisplay, <>, <>);
 #endif
+
+/*
+	TissueSite synapseSite_0( -41.813, 175.470, -0.645, 7.0 );
+	polyConnect(timeStep, synapseVoltageDisplay0, <>, <>);
+	polyConnect(tissueFunctor("Probe", <CATEGORY="BRANCH", TYPE="Voltage", NEURON_INDEX=0>), synapseVoltageDisplay0, <>, <site=synapseSite_0>);
+#if SIMULATION_INVOLVE >= VM_CACYTO
+	polyConnect(timeStep, synapseCalciumDisplay0, <>, <>);
+	polyConnect(tissueFunctor("Probe", <CATEGORY="BRANCH", TYPE="Calcium", NEURON_INDEX=0>), synapseCalciumDisplay0, <>, <site=synapseSite_0>);
+#endif
+
 */
 
 {{#inputs}}
