update:  - comments: CaConcentration, CaERConcentration  - rename: ChannelHayHCN --> ChannelHCN (implement 2 papers:    Huguenard-McCormick 1992 and Van Der Giessen-...-De Zeeuw 2008)  - Tuan2016.gsl: use a different name for diffusion of Ca, CaER in spineattachment: "_SpineNeck" suffix  - compartmental.mdl: to use ChannelHCN add:  - StringUtils: wait() method  - recording capability to CaER fix:  - SpineAttachment_VmCai, SpineAttachment_VmCaiCaER: The formula of Caconc2Conc, CaERconc2Conc remove:  - HCNChannel: no need (use ChannelHCN)  - ChannelSchweighoferHCN: no need (use ChannelHCN)  - ChannelHayHCN: no need (use ChannelHCN)

--- a/graphs/MSN/connect_recording_model.gsl.template
+++ b/graphs/MSN/connect_recording_model.gsl.template
@@ -6,6 +6,11 @@
    polyConnect( tissueFunctor("Probe", <CATEGORY="JUNCTION", TYPE="Calcium", BRANCHORDER=0>), calciumSomaDisplay, <>, <>);
 #endif
 
+#if SIMULATION_INVOLVE >= VM_CACYTO_CAER
+   polyConnect(timeStep, calciumSomaERDisplay, <>, <>);
+   polyConnect( tissueFunctor("Probe", <CATEGORY="JUNCTION", TYPE="CalciumER", BRANCHORDER=0>), calciumSomaERDisplay, <>, <>);
+#endif
+
 /*
 	TissueSite synapseSite_0( -41.813, 175.470, -0.645, 7.0 );
 	polyConnect(timeStep, synapseVoltageDisplay0, <>, <>);
