update:  - Hay2011: use 9xx capsules, revise recording (soma, middleden, distalden) add:  - new mdl: Calmodulin, ChannelHayHCN, ChannelIP3R, LeakPassiveCurrent, ModuleConcentration (C++ code to be added later)

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ models/**/*.C
 gsl/extensions/struct/*
 *.swn
 graphs/**/runs/**
+graphs/**/L5bPCmodelsEH/**
+graphs/**/*.out
+graphs/**/*.par
+graphs/**/out*/**
+graphs/**/*backup*/**
+graphs/**/*ongoing*/**
+graphs/**/*test*/**
