--- a/.lvimrc
+++ b/.lvimrc
@@ -5,7 +5,7 @@
 set tabstop=2
 set softtabstop=2
 set shiftwidth=2
-set noexpandtab
+set expandtab
 
 "" Notify user if lines too long"
 set colorcolumn=110
@@ -31,6 +31,8 @@ au BufNewFile,BufRead *.gsl setlocal ft=gsl foldmethod=marker
 au BufNewFile,BufRead *.mdl setlocal ft=mdl foldmethod=marker
 au BufNewFile,BufRead NTSMacros.h setlocal foldmethod=marker
 au BufNewFile,BufRead *.par setlocal foldmethod=marker
+au BufNewFile,BufRead make_nts setlocal foldmethod=marker
+au BufNewFile,BufRead build_gsl setlocal foldmethod=marker
 "noremap <leader>f <Esc>:syn region myFold start="/*{{{*/" end="/*}}}*/" transparent fold<CR>
 noremap <leader>f <Esc>:syn region myFold start="{{{" end="}}}" transparent fold<CR>
 "" all consecutive comments (starting with a space and //)
