--- a/.lvimrc
+++ b/.lvimrc
@@ -2,10 +2,10 @@
 "set tabstop=4
 "set softtabstop=4
 "set shiftwidth=4
-set tabstop=2
-set softtabstop=2
-set shiftwidth=2
-set expandtab
+"set tabstop=2
+"set softtabstop=2
+"set shiftwidth=2
+"set expandtab
 
 "" Notify user if lines too long"
 set colorcolumn=110
