fix:   - fix previous update for shell soma

--- a/nti/Makefile
+++ b/nti/Makefile
@@ -173,6 +173,7 @@ TouchVector.cxx \
 Translation.cxx \
 ZeroTouchAnalysis.cxx \
 TissueContext.cxx \
+GlobalNTSConfig.cxx \
 
 TISSUE_LIB_SOURCES = CompartmentKey.cxx \
 
