--- a/graphs/MSN/recording_model.gsl.template
+++ b/graphs/MSN/recording_model.gsl.template
@@ -1,13 +1,13 @@
 VoltageDisplay voltageDisplay<fileName= PathFileCombine("somaV.dat")>;
 voltageDisplay.dataCollection(<>) on recOn;
 
-#if SIMULATION_INVOLVE >= VM_CACYTO
+#if defined(SIMULATE_CACYTO)
 CalciumDisplay calciumSomaDisplay<fileName= PathFileCombine("somaCa.dat")>;
 calciumSomaDisplay.dataCollection(<>) on recOn;
 //calciumSomaDisplay.dataCollection(<>) on recOnPassTime;
 #endif
 
-#if SIMULATION_INVOLVE >= VM_CACYTO_CAER
+#if defined(SIMULATE_CAER)
 CalciumDisplay calciumSomaERDisplay<fileName= PathFileCombine("somaCaER.dat")>;
 calciumSomaERDisplay.dataCollection(<>) on recOn;
 //calciumSomaDisplay.dataCollection(<>) on recOnPassTime;
@@ -25,7 +25,7 @@ synapseCalciumDisplay_0.dataCollection(<>) on recOn;
 VoltageDisplay voltageDisplay_spine_{{name}}<fileName=PathFileCombine("V_spine_{{name}}.dat")>;
 voltageDisplay_spine_{{name}}.dataCollection(<>) on recOn;
 
-#if SIMULATION_INVOLVE >= VM_CACYTO
+#if defined(SIMULATE_CACYTO)
 CalciumDisplay calciumDisplay_spine_{{name}}<fileName=PathFileCombine("Ca_spine_{{name}}.dat")>;
 calciumDisplay_spine_{{name}}.dataCollection(<>) on recOn;
 #endif
@@ -36,7 +36,7 @@ calciumDisplay_spine_{{name}}.dataCollection(<>) on recOn;
 VoltageDisplay voltageDisplay_bouton_{{name}}<fileName=PathFileCombine("V_bouton_{{name}}.dat")>;
 voltageDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 
-#if SIMULATION_INVOLVE >= VM_CACYTO
+#if defined(SIMULATE_CACYTO)
 CalciumDisplay calciumDisplay_bouton_{{name}}<fileName=PathFileCombine("Ca_bouton_{{name}}.dat")>;
 calciumDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 #endif
@@ -46,7 +46,7 @@ calciumDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 {{#synapse_include}}
 VoltageDisplay voltageDisplay_synapse_{{name}}<fileName=PathFileCombine("V_synapse_{{name}}.dat")>;
 voltageDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
-#if SIMULATION_INVOLVE >= VM_CACYTO
+#if defined(SIMULATE_CACYTO)
 CalciumDisplay calciumDisplay_synapse_{{name}}<fileName=PathFileCombine("Ca_synapse_{{name}}.dat")>;
 calciumDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 #endif
@@ -61,7 +61,7 @@ calciumDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 VoltageDisplay voltageDisplay_bouton_{{name}}<fileName=PathFileCombine("V_bouton_{{name}}.dat")>;
 voltageDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 
-#if SIMULATION_INVOLVE >= VM_CACYTO
+#if defined(SIMULATE_CACYTO)
 CalciumDisplay calciumDisplay_bouton_{{name}}<fileName=PathFileCombine("Ca_bouton_{{name}}.dat")>;
 calciumDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 #endif
@@ -72,7 +72,7 @@ calciumDisplay_bouton_{{name}}.dataCollection(<>) on recOn;
 VoltageDisplay voltageDisplay_synapse_{{name}}<fileName=PathFileCombine("V_synapse_{{name}}.dat")>;
 voltageDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 
-#if SIMULATION_INVOLVE >= VM_CACYTO
+#if defined(SIMULATE_CACYTO)
 CalciumDisplay calciumDisplay_synapse_{{name}}<fileName=PathFileCombine("Ca_synapse_{{name}}.dat")>;
 calciumDisplay_synapse_{{name}}.dataCollection(<>) on recOn;
 #endif
