add:   - Zipper (adopted from J.Kozloski with some changes): 1. no "ProbedLayout" only "Layout", 2. no needs to change to any other NodeTypes, 3. fixed bugs, 4. no modify IsoSampler, use IsoSamplerHybrid instead (relax the constraint of same-index between source-node and dest-node), 5. revise ComputeBranch

--- a/nti/Makefile
+++ b/nti/Makefile
@@ -125,6 +125,7 @@ ND_SHARED_SOURCES = Branch.cxx \
 SegmentKeySegmentSpace.cxx \
 NeuroDevCommandLine.cxx \
 Capsule.cxx \
+ComputeBranch.cxx \
 Communicator.cxx \
 Director.cxx \
 History.cxx \
