--- a/.lvimrc
+++ b/.lvimrc
@@ -33,6 +33,7 @@ au BufNewFile,BufRead NTSMacros.h setlocal foldmethod=marker
 au BufNewFile,BufRead *.par setlocal foldmethod=marker
 au BufNewFile,BufRead make_nts setlocal foldmethod=marker
 au BufNewFile,BufRead build_gsl setlocal foldmethod=marker
+au BufNewFile,BufRead *.mk setlocal ft=mdl foldmethod=marker
 "noremap <leader>f <Esc>:syn region myFold start="/*{{{*/" end="/*}}}*/" transparent fold<CR>
 noremap <leader>f <Esc>:syn region myFold start="{{{" end="}}}" transparent fold<CR>
 "" all consecutive comments (starting with a space and //)
